--- a/about.html
+++ b/about.html
@@ -1,19 +1,26 @@
-<!-- /*
-* Template Name: Learner
-* Template Author: Untree.co
-* Tempalte URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
-<!doctype html>
-<html lang="en">
+
+<!DOCTYPE html>
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="./images/leaner72.png" />
 
-  <meta name="description" content="" />
-  <meta name="keywords" content="bootstrap, bootstrap4" />
+    <!-- ! manifest -->
+    <link rel="manifest" href="./manifest.json" />
+    <!-- ! Start Manifest Configs For Safari and ios -->
+
+    <link rel="apple-touch-icon" href="./images/leaner72.png" />
+    <link rel="apple-touch-icon" sizes="48x48" href="./images/leaner72.png" />
+    <link rel="apple-touch-icon" sizes="96x96" href="./images/leaner96.png" />
+
+    <link rel="apple-touch-startup-image" href="./images/leaner72.png" />
+    <meta name="theme-color" content="#000" />
+    <meta name="apple-mobile-web-app-title" content="Learning is easy" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#000" />
+
+    <!-- !Finish Manifest Configs For Safari -->
 
   <link href="https://fonts.googleapis.com/css2?family=Display+Playfair:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
