--- a/news.html
+++ b/news.html
@@ -41,31 +41,35 @@
       <div class="site-mobile-menu-body"></div>
     </div>
 
+    <!-- !navbar and topbar -->
     <nav class="site-nav mb-5">
+      <!-- !start Topbar -->
       <div class="pb-2 top-bar mb-3">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-6 col-lg-9">
-              <a href="#" class="small mr-3"
-                ><span class="icon-question-circle-o mr-2"></span>
+            <div class="col-6 col-lg-9 text-right">
+              <a href="#" class="small ms-1"
+                ><span class="icon-question-circle-o ms-2"></span>
                 <span class="d-none d-lg-inline-block"
                   >Have a questions?</span
                 ></a
               >
-              <a href="#" class="small mr-3"
-                ><span class="icon-phone mr-2"></span>
+              <a href="#" class="small ms-1"
+                ><span class="icon-phone ms-2"></span>
                 <span class="d-none d-lg-inline-block">10 20 123 456</span></a
               >
-              <a href="#" class="small mr-3"
-                ><span class="icon-envelope mr-2"></span>
+              <a href="#" class="small ms-1"
+                ><span class="icon-envelope ms-2"></span>
                 <span class="d-none d-lg-inline-block"
                   >info@mydomain.com</span
                 ></a
               >
             </div>
 
-            <div class="col-6 col-lg-3 text-right">
-              <a href="login.html" class="small mr-3">
+            <div
+              class="col-6 col-lg-3 text-left d-flex justify-content-end gap-2"
+            >
+              <a href="login.html" class="small ms-3">
                 <span class="icon-lock"></span>
                 Log In
               </a>
@@ -77,15 +81,18 @@
           </div>
         </div>
       </div>
+      <!-- !end Topbar -->
+
+      <!-- !start navabr -->
       <div class="sticky-nav js-sticky-header">
-        <div class="container position-relative">
-          <div class="site-navigation text-center">
+        <div class="container position-sticky top-0">
+          <div class="site-navigation">
             <a href="index.html" class="logo menu-absolute m-0"
               >Learner<span class="text-primary">.</span></a
             >
 
             <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
-              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
               <li class="has-children">
                 <a href="#">Dropdown</a>
                 <ul class="dropdown">
@@ -102,13 +109,22 @@
                 </ul>
               </li>
               <li><a href="staff.html">Our Staff</a></li>
-              <li class="active"><a href="news.html">News</a></li>
+              <li><a href="news.html">News</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li>
+                <a
+                  href="#"
+                  class="btn-book btn text-white btn-primary btn-sm menu-absolute d-block d-lg-none"
+                  >Enroll Now</a
+                >
+              </li>
             </ul>
 
-            <a href="#" class="btn-book btn btn-secondary btn-sm menu-absolute"
+            <a
+              href="#"
+              class="btn-book btn btn-secondary btn-sm menu-absolute d-none d-lg-inline-block"
               >Enroll Now</a
             >
 
@@ -123,6 +139,7 @@
           </div>
         </div>
       </div>
+      <!-- !end navabr -->
     </nav>
 
     <div
